--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -5,7 +5,7 @@
                 <div class="row" style="margin-bottom:15px;" if.bind="theme.is_desktop">
                     <form style="display:flex;" class="fast-term-search">
                         <div class="input-group" style="width:236px;">
-                            <search-input value.bind="filter" change.delegate="update_story_list()" if.bind="theme.is_desktop"
+                            <search-input value.bind="filter" change.trigger="update_story_list()" if.bind="theme.is_desktop"
                                 placeholder="terms.filter" help_topic="terms-help" height="38"></search-input>
                         </div>
                         <div class="input-group" if.bind="user.editing && checked_terms.size == 0" style="margin-right:4px;">
@@ -48,7 +48,7 @@
                 <div class="row" if.bind="! editing_filters">
                     <button class="btn btn-basic btn-sm btn-framed" 
                         if.bind="! theme.is_desktop" 
-                        click.delegate="show_filters_only()"
+                        click.trigger="show_filters_only()"
                         style="margin-bottom:12px">${'terms.edit-filters' & t}
                     </button>
                     <h3 if.bind="empty" innerhtml.bind="'no-results' & t">
@@ -57,13 +57,13 @@
                         ref="scroll_area" class="unselectable">
                         <li repeat.for="term of term_list | filter: filter : 'Name' : 'author'" dir="rtl"
                             style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;cursor:pointer;"
-                            click.delegate="jump_to_the_full_story($event, term)">
+                            click.trigger="jump_to_the_full_story($event, term)">
                             <div style="height:120px;overflow:hidden;" class="story-preview">
                                 <div style="margin-bottom: 10px;padding-right:0px;">
                                     <editable
                                         settings.bind="{show_author:true, show_date:false, class:'story-section', no_expand: true, checkable: true}"
                                         story.bind="term.story"
-                                        change.delegate="toggle_selection(term, $event, $index)"
+                                        change.trigger="toggle_selection(term, $event, $index)"
                                         info_title.bind="term.name" info_content.bind="term.keywords"
                                         class="story-body">
                                     </editable>
@@ -93,10 +93,10 @@
                             settings.bind="options_settings" 
                             has_groups.bind="has_grouped_topics"
                             option_groups.bind="topic_groups" 
-                            ms-change.delegate="handle_topic_change($event)"
-                            new-name.delegate="add_topic($event)" 
-                            name-changed.delegate="topic_name_changed($event)"
-                            remove-option.delegate="remove_topic($event)"
+                            ms-change.trigger="handle_topic_change($event)"
+                            new-name.trigger="add_topic($event)" 
+                            name-changed.trigger="topic_name_changed($event)"
+                            remove-option.trigger="remove_topic($event)"
                             clear_selections_now.bind="clear_selected_topics_now" style="margin-top:5px;">
                     </multi-select>
                 </div>
