--- a/src/videos/annotate-video.html
+++ b/src/videos/annotate-video.html
@@ -2,8 +2,8 @@
     <div class="detail-header">
         <div style="float:left;cursor:pointer;padding:0;margin:0;">
             <chat-button chatroom_id.two-way="chatroom_id" caption.bind="'photos.add-details'"
-                            new-chatroom.delegate="create_chatroom()"
-                            chatroom-deleted.delegate="chatroom_deleted($event)">
+                            new-chatroom.trigger="create_chatroom()"
+                            chatroom-deleted.trigger="chatroom_deleted($event)">
             </chat-button>
             <i class="far fa-lg fa-arrow-up fa-rotate-90 ${next_class}" t="[title]photos.next-slide"
                 click.trigger="go_next($event)" if.bind="photo_ids.length > 1"></i>
@@ -52,9 +52,9 @@
                 <multi-select options.bind="topic_list" category="topic"
                                 selected_options.bind="params.selected_topics" option_groups.bind="topic_groups"
                                 first_time.bind="no_topics_yet"
-                                new-name.delegate="add_topic($event)" settings.bind="options_settings"
+                                new-name.trigger="add_topic($event)" settings.bind="options_settings"
                                 has_groups.bind="has_grouped_topics" place_holder_text="photos.click-topic"
-                                ms-change.delegate="handle_topic_change($event) ">
+                                ms-change.trigger="handle_topic_change($event) ">
                 </multi-select>
             </div>
             <div class="multi-select-div"
@@ -68,9 +68,9 @@
                                 selected_options.bind="params.selected_photographers"
                                 settings.bind="photographers_settings"
                                 first_time.bind="no_photographers_yet"
-                                new-name.delegate="add_photographer($event)"
-                                name-changed.delegate="photographer_name_changed($event)"
-                                ms-change.delegate="handle_photographer_change($event)">
+                                new-name.trigger="add_photographer($event)"
+                                name-changed.trigger="photographer_name_changed($event)"
+                                ms-change.trigger="handle_photographer_change($event)">
                 </multi-select>
             </div>
             <div if.bind="!user.editing">
@@ -83,13 +83,13 @@
                 <date-range label="stories.story-date" base_date_str.bind="video_date_str"
                             range_options.bind="[1,2,3,5,10,15,20,30,50,100]"
                             is_valid.bind="video_date_valid"
-                            change.delegate="update_video_date($event)" span_size.bind="video_date_datespan">
+                            change.trigger="update_video_date($event)" span_size.bind="video_date_datespan">
                 </date-range>
             </div>
             <span if.bind="topic_names && ! user.editing">${'photos.keywords' & t}: ${topic_names}</span>
             <div style="margin-top: 10px;margin-bottom:2px;font-size:120%" if.bind="user.editing">
                 <button if.bind="undo_list.length > 0" class="btn btn-warning" style="width:90%;"
-                        click.delegate="undo()">
+                        click.trigger="undo()">
                     <i class="fa fa-lg fa-undo"> ${'photos.undo-last-change' & t}</i>
                 </button>
             </div>
@@ -100,7 +100,7 @@
             <button if.bind="user.editing"
                     class="btn btn-primary btn-framed"
                     style="margin-top:8px;font-size:108%;"
-                    click.delegate="select_video_members()">
+                    click.trigger="select_video_members()">
                 <i style="cursor:pointer"
                     class="fa fa-users"
                     title="${'videos.members-in' & t}">
@@ -121,7 +121,7 @@
                 <!--yt-player if.bind="video_type=='youtube'" player.bind="yt_player" video-id.bind="video_src" player_is_ready.bind="player_is_ready"></yt-player-->
                 <compose view-model="../services/yt-keeper" if.bind="video_type=='youtube'"></compose>
             </div>
-            <button class="btn btn-primary" click.delegate="add_cue_point()"
+            <button class="btn btn-primary" click.trigger="add_cue_point()"
                     if.bind="user.editing && user.privileges.VIDEO_EDITOR"
                     disabled.bind="(!player.paused) || already_in">
                 ${'videos.add-cue' & t}
@@ -141,16 +141,16 @@
                     <tr repeat.for="cue of cue_points" class="${cue.cls}">
                         <td>
                             <span style="width:60px">${cue.time | formatTime}</span>
-                            <i class="fa fa-play fa-xs" if.bind="user.editing && cue.is_current" click.delegate="step(cue, +1)" style="margin-right:4px"></i>
-                            <i class="fa fa-play fa-xs fa-rotate-180" if.bind="user.editing && cue.is_current" click.delegate="step(cue, -1)"></i>
-                            <i class="${cue.is_current ? 'fas' : 'far'} fa-circle" click.delegate="jump_to_cue(cue)"
+                            <i class="fa fa-play fa-xs" if.bind="user.editing && cue.is_current" click.trigger="step(cue, +1)" style="margin-right:4px"></i>
+                            <i class="fa fa-play fa-xs fa-rotate-180" if.bind="user.editing && cue.is_current" click.trigger="step(cue, -1)"></i>
+                            <i class="${cue.is_current ? 'fas' : 'far'} fa-circle" click.trigger="jump_to_cue(cue)"
                                 style="float:left;margin-top:4px;cursor:pointer;"></i>
                         </td>
                         <td if.bind="user.editing">
                             <i style="cursor:pointer"
                                 class="fa fa-users"
                                 title="${'videos.members-in' & t}"
-                                click.delegate="select_members(cue)">
+                                click.trigger="select_members(cue)">
                             </i>
                         </td>
                         <td>
@@ -160,11 +160,11 @@
                             <span if.bind="user.editing">
                                 <input type="text" value.bind="cue.description"
                                     placeholder="${'videos.describe-cue' & t}"
-                                    change.delegate="cue_description_changed(cue)"
+                                    change.trigger="cue_description_changed(cue)"
                                     style="height:28px;width:100%;"/>
                             </span>
                         </td>
-                        <td if.bind="user.editing" style="width:40px" click.delegate="remove_cue(cue)">
+                        <td if.bind="user.editing" style="width:40px" click.trigger="remove_cue(cue)">
                             <i style="margin-right:5px;cursor:pointer;" class="fa fa-trash"></i>
                         </td>
                     </tr>
