--- a/src/videos/videos-old.html
+++ b/src/videos/videos-old.html
@@ -4,24 +4,24 @@
             <div class="col-md-9" if.bind="! editing_filters">
                 <div class="row" style="margin-bottom:15px;">
                     <div class="col-md-1 paging-buttons" dir="ltr" if.bind="theme.width>= 1200">
-                        <button t="[title]videos.prev" class="btn btn-default" click.delegate="page(-1, $event)" disabled.bind="prev_disabled"><i class="fas fa-chevron-left"></i></button>
-                        <button t="[title]videos.next" class="btn btn-default" click.delegate="page(+1, $event)" disabled.bind="next_disabled"><i class="fas fa-chevron-right"></i></button>
+                        <button t="[title]videos.prev" class="btn btn-default" click.trigger="page(-1, $event)" disabled.bind="prev_disabled"><i class="fas fa-chevron-left"></i></button>
+                        <button t="[title]videos.next" class="btn btn-default" click.trigger="page(+1, $event)" disabled.bind="next_disabled"><i class="fas fa-chevron-right"></i></button>
                     </div>
                     <div class="col-md-10 col-md-offset-1 ctrls-group">
                         <button class="btn btn-basic btn-sm btn-framed" 
                             if.bind="! theme.is_desktop" 
-                            click.delegate="show_filters_only()"
+                            click.trigger="show_filters_only()"
                             css="margin-${theme.other_dir}:6px;margin-${theme.same_dir}:-16px;">${'videos.edit-filters' & t}
                         </button>
                         <div class="input-group" id="videos-name-search" >
                             <search-input value.bind="filter" placeholder="videos.filter" height="30"></search-input>
                         </div>
                         <div class="paging-buttons" dir="ltr" if.bind="! theme.is_desktop">
-                            <button t="[title]videos.prev" class="btn btn-default" click.delegate="page(-1, $event)" disabled.bind="prev_disabled"><i class="fas fa-chevron-left"></i></button>
-                            <button t="[title]videos.next" class="btn btn-default" click.delegate="page(+1, $event)" disabled.bind="next_disabled"><i class="fas fa-chevron-right"></i></button>
+                            <button t="[title]videos.prev" class="btn btn-default" click.trigger="page(-1, $event)" disabled.bind="prev_disabled"><i class="fas fa-chevron-left"></i></button>
+                            <button t="[title]videos.next" class="btn btn-default" click.trigger="page(+1, $event)" disabled.bind="next_disabled"><i class="fas fa-chevron-right"></i></button>
                         </div>
                         <div if.bind="phase=='photos-ready-to-edit'" class="ctrl">
-                            <button click.delegate="new_video()" class="btn btn-success cl-create-btn" style="height:32px;margin-right:4px;">
+                            <button click.trigger="new_video()" class="btn btn-success cl-create-btn" style="height:32px;margin-right:4px;">
                                 <i class="far fa-plus-square"></i>
                                 ${'videos.new' & t}
                             </button>
@@ -80,9 +80,9 @@
                                     <info title.bind="video_info_title(video)" content.bind="video_info_content(video)"></info>
                                 </span>
                                 <span if.bind="user.editing">
-                                    <i class="fa${video.selected ? 's' : 'r'} fa-circle" click.delegate="toggle_selection(video, $event, $index)"></i>
-                                    <i class="fas fa-trash-alt" click.delegate="delete_video(video)"></i>
-                                    <i class="fas fa-pencil" click.delegate="edit_video_info(video)"></i>
+                                    <i class="fa${video.selected ? 's' : 'r'} fa-circle" click.trigger="toggle_selection(video, $event, $index)"></i>
+                                    <i class="fas fa-trash-alt" click.trigger="delete_video(video)"></i>
+                                    <i class="fas fa-pencil" click.trigger="edit_video_info(video)"></i>
                                 </span>
                                 ${video.name}
                             </span>
@@ -107,12 +107,12 @@
                         option_groups.bind="topic_groups"
                         name="topics"
                         highlight_unselectors.bind="highlight_unselectors"
-                        new-name.delegate="add_topic($event)"
-                        remove-option.delegate="remove_topic($event)"
-                        name-changed.delegate="topic_name_changed($event)"
+                        new-name.trigger="add_topic($event)"
+                        remove-option.trigger="remove_topic($event)"
+                        name-changed.trigger="topic_name_changed($event)"
                         place_holder_text="photos.click-topic"
                         clear_selections_now.bind="clear_selected_topics_now"
-                        ms-change.delegate="handle_topic_change($event) ">
+                        ms-change.trigger="handle_topic_change($event) ">
                     </multi-select>
                 </div>
                 <div class="row">
@@ -124,11 +124,11 @@
                         first_time.bind="no_photographers_yet"
                         settings.bind="photographers_settings"
                         has_groups.bind="has_grouped_photographers"
-                        new-name.delegate="add_photographer($event)"
-                        remove-option.delegate="remove_photographer($event)"
-                        name-changed.delegate="photographer_name_changed($event)"
+                        new-name.trigger="add_photographer($event)"
+                        remove-option.trigger="remove_photographer($event)"
+                        name-changed.trigger="photographer_name_changed($event)"
                         clear_selections_now.bind="clear_selected_phototgraphers_now"
-                        ms-change.delegate="handle_photographer_change($event)">
+                        ms-change.trigger="handle_photographer_change($event)">
                     </multi-select>
                 </div>
             </div>
