--- a/src/admin/hit-counts.html
+++ b/src/admin/hit-counts.html
@@ -1,4 +1,4 @@
-<require from="./admin.css"></require>
+<import from="./admin.scss"></import>
 <section class="container content-area" style="padding-right:30px;" dir="ltr">
     <div css="direction:${theme.rtltr1}">
         <span class="boom">Total Hits Count: ${total_count}</span>
