--- a/src/photos/qr-photo.html
+++ b/src/photos/qr-photo.html
@@ -1,5 +1,5 @@
 <template>
-    <require from="./qr-photo.css"></require>
+    <import from="./qr-photo.scss"></import>
     <ux-dialog css="padding:12px;direction:${theme.rtltr}">
         <ux-dialog-header>
             <h3>${'photos.create-qr-photo' & t}</h3>
