--- a/src/services/query/query.html
+++ b/src/services/query/query.html
@@ -1,5 +1,5 @@
 <template style="direction:ltr;" id="query">
-    <require from="./query.css"></require>
+    <import from="./query.scss"></import>
     <ux-dialog css="padding:12px;direction:${theme.rtltr}">
         <ux-dialog-header>
             <h3>${'query.query-title' & t}</h3>
