--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Stories</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="HWlQ64YZv4Qp97_JanEUUJl58eED5bcUjA3RPSL13Dk" />
+  <link rel="stylesheet" href="fontawesome/css/all.css" type="text/css" />
 </head>
 
 <body>
   <my-app></my-app>
+  <script>
+    // backwared compatibility
+    let lst = location.href.split('/');
+    if (location.href.includes('.html')) {
+        let s = lst[0] + '//' + lst[2] + '/' + lst[3] + '/' + lst[5] + '#';
+        for (let i=7; i < lst.length; i++) s += '/' + lst[i];
+        location.href = s;
+    }
+</script>
 </body>
 
 </html>
