--- a/src/members/member-faces.html
+++ b/src/members/member-faces.html
@@ -7,7 +7,7 @@
         <ul class="list-group">
             <li class="list-group-item" repeat.for="member of members">
                 <a route-href="route: member-details; params.bind: {id:member.id, keywords: ''}">
-                    <img src.bind="member.facePhotoURL"/>
+                    <img src.bind="member.facephotourl"/>
                     <h6 dir="${theme.rtltr}" class="list-group-item-heading">${member.full_name}
                     </h6>
                 </a>
