--- a/src/members/member-picker.html
+++ b/src/members/member-picker.html
@@ -41,7 +41,7 @@
                         class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''} ${member.selected}">
 
                         <a click.delegate="select(member)" style="vertical-align: text-bottom;align-content: center;cursor:pointer;" aubs-tooltip="text.bind:member.name">
-                            <img src.bind="member.facePhotoURL" />
+                            <img src.bind="member.facephotourl" />
                             <h6 dir="rtl" class="list-group-item-heading" style="text-align: center;">${member.name}</h6>
                         </a>
                     </li>
