--- a/src/members/members.html
+++ b/src/members/members.html
@@ -98,7 +98,7 @@
                         <a click.delegate="member_clicked(member, $event, $index)" tapandhold="500"
                             longtouch.delegate="toggle_selection(member, $event)" disabled.bind="not_ready(member)"
                             style="color:black;cursor:pointer;">
-                            <img src.bind="member.facePhotoURL"
+                            <img src.bind="member.facephotourl"
                                 css="border: ${member.selected ? '6px solid lightgreen' : 'none'}" 
                                 width.bind="photo_size" height.bind="photo_size"/>
                             <h6 class="list-group-item-heading">${member.name}</h6>
