--- a/src/members/memorial.html
+++ b/src/members/memorial.html
@@ -29,7 +29,7 @@
                                     style="margin-bottom: 10px"
                                 >
                                     <div>
-                                        <img src.bind="member.facePhotoURL"
+                                        <img src.bind="member.facephotourl"
                                             style="border-radius: 50%"
                                             width="120"
                                         />
