--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -56,7 +56,7 @@
                         </h3>
                         <ul id="term-list" class="${empty ? 'empty-terms' : ''}"
                             ref="scroll_area" class="unselectable">
-                            <li repeat.for="term of term_list | filter: filter : 'Name' : 'author'" dir="rtl"
+                            <li repeat.for="term of term_list | filter: filter : 'name' : 'author'" dir="rtl"
                                 style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;cursor:pointer;"
                                 click.delegate="jump_to_the_full_story($event, term)">
                                 <div style="height:120px;overflow:hidden;" class="story-preview">
