--- a/src/videos/replace-thumbnail.html
+++ b/src/videos/replace-thumbnail.html
@@ -18,8 +18,8 @@
                     <span class="error" if.bind="error_message">${error_message}</span>
                 </div>
             </form>
-            <div>
-                <img src.bind="curr_thumbnail_url" />
+            <div style="margin-right:80px">
+                <img src.bind="curr_thumbnail_url" width="400px"/>
             </div>
         </ux-dialog-body>
         <ux-dialog-footer>
