--- a/src/videos/replace-thumbnail.html
+++ b/src/videos/replace-thumbnail.html
@@ -5,6 +5,18 @@
         </ux-dialog-header>
         <ux-dialog-body>
             <form class="form-horizontal" role="form" onsubmit="return false">
+                <div style="display:flex;margin-bottom:8px;">
+                    <span style="margin-top:6px;">
+                        ${'videos.select-thumbnail' & t}:
+                    </span>
+                    <button class="btn btn-default"
+                        style="margin-right:8px;width:80px;" 
+                        repeat.for="key of ['max-res', 'hq', 'curr']"
+                        click.delegate="set_thumbnail(key, video.src)"
+                        >
+                    ${key}
+                    </button>
+                </div>
                 <div class="form-group" style="display:flex">
                     <input type="text" class="form-control"
                         style="width:90%"
