--- a/src/resources/elements/photo-uploader/photo-uploader.html
+++ b/src/resources/elements/photo-uploader/photo-uploader.html
@@ -18,6 +18,7 @@
                     <input
                         class="custom-file-input"
                         type="file" id="photos"
+                        data-content="${prompt}"
                         accept="image/*"
                         files.bind="photos">
                 </div>
