--- a/src/resources/elements/editable.html
+++ b/src/resources/elements/editable.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="fr-view ${settings.class} message-body">
-            <p class="${theme.font_size}" innerhtml.bind="story.preview || ''" dir.bind="theme.rtltr" style="text-align:justify;">
+            <p class="${theme.font_size}" innerhtml.bind="story.preview || ''" dir.bind="theme.rtltr" css="text-align:justify;width:${width}px;">
             </p>
         </div>
     </div>
