--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -115,9 +115,9 @@
                                             class:'story-section', 
                                             checkable: true, 
                                             confirmable: params.approval_state.id==2, 
-                                            has_details: used_for==9 && ! single_doc_entry }"
+                                            has_details: (used_for==9 || used_for==14) && ! single_doc_entry }"
                                         story.bind="story"
-                                        view_details.delegate="view_details(story, $event)"
+                                        view_details.delegate="view_details(story, $event, used_for==14)"
                                         change.delegate="toggle_story_selection(story, $event, $index)"
                                         confirm.delegate="approve_story(story, $event)"
                                         info_title.bind="story.name" info_content.bind="story.topics"
