--- a/src/members/members.html
+++ b/src/members/members.html
@@ -69,7 +69,7 @@
                             ${'members.apply-answers' & t}
                         </button>
                         <button if.bind="user.privileges.ADMIN && user.editing && theme.is_desktop"
-                            style="height:36px;margin-top:16px;font-size:small;border:1px solid lightgray"
+                            style="height:36px;margin-top:16px;margin-right:8px;font-size:small;border:1px solid lightgray"
                             class="btn btn-basic btn-lg" click.delegate="check_duplicates()">
                             ${'members.check-duplicates' & t}
                         </button>
