--- a/src/admin/hit-counts.html
+++ b/src/admin/hit-counts.html
@@ -31,7 +31,11 @@
                 <tbody>
                     <tr repeat.for="item of $displayData">
                         <td>${item.item_id}</td>
-                        <td css="direction:${theme.rtltr}">${item.name}</td>
+                        <td css="direction:${theme.rtltr}">
+                            <a href="item.url">
+                                <span style="width:100%">${item.name}</span>
+                            </a>
+                        </td>
                         <!-- <td>${item.count}</td> -->
                         <td>${item.new_count}</td>
                     </tr>
